Made the docs themeable and added watcher and options to build script

--- a/docs/_sass/bootstrap.sass
+++ b/docs/_sass/bootstrap.sass
@@ -36,7 +36,7 @@ $bootstrap-invert: #fff
 
 .bd-pro.bd-is-bulma
   .icon
-    color: $primary
+    color: v("primary")
 
 .bd-pro.bd-is-bootstrap
   .icon
@@ -46,7 +46,7 @@ $bootstrap-invert: #fff
   margin: 0 auto
   max-width: 42rem
   .table
-    color: $red
+    color: v("red")
     thead,
     tfoot
       th
@@ -63,19 +63,19 @@ $bootstrap-invert: #fff
         font-size: 1.25rem
         text-align: center
       td
-        font-family: $family-monospace
+        font-family: v("family-monospace")
         width: 50%
       a
         color: currentColor
         &:hover
           text-decoration: underline
     .bd-is-empty
-      background-color: $background
-      color: $text-light
+      background-color: v("background")
+      color: v("text-light")
     .bd-is-unique
-      background-color: rgba($green, 0.25)
-      color: $text-strong
-      font-weight: $weight-bold
+      background-color: vAlphaChange("green", 0.25)
+      color: v("text-strong")
+      font-weight: v("weight-bold")
 
 .bd-bootstrap-comparison-header
   margin-bottom: 3rem
