--- a/docs/_sass/expo.sass
+++ b/docs/_sass/expo.sass
@@ -1,5 +1,5 @@
 .bd-expo
-  background-color: $scheme-main
+  background-color: v("scheme-main")
   padding: 1.5rem
 
 .bd-website
@@ -22,18 +22,18 @@
       opacity: 0.25
   .b-lazy
     opacity: 0
-    transition: opacity 500ms $easing
+    transition: opacity 500ms v("easing")
   .b-loaded
     opacity: 1
 
 .bd-website-shadow
   border: 1px solid rgba(#000, 0.04)
-  transition: opacity 200ms $easing
+  transition: opacity 200ms v("easing")
 
 .bd-website-overlay
-  background-color: $scheme-invert
+  background-color: v("scheme-invert")
   opacity: 0
-  transition: opacity 200ms $easing
+  transition: opacity 200ms v("easing")
 
 +mobile
   .bd-website:not(:last-child)
