--- a/docs/_sass/footer.sass
+++ b/docs/_sass/footer.sass
@@ -1,17 +1,17 @@
 .bd-footer-title
-  color: $text-strong
+  color: v("text-strong")
   font-size: 1.25rem
   line-height: 1.25
   margin-bottom: 0.5rem
-  transition-duration: $speed
+  transition-duration: v("speed")
   transition-property: color
   strong
-    font-weight: $weight-semibold
+    font-weight: v("weight-semibold")
 
 .bd-footer-subtitle
-  color: $border-hover
+  color: v("border-hover")
   margin-top: -0.5rem
-  transition-duration: $speed
+  transition-duration: v("speed")
   transition-property: color
 
 .bd-footer-iframe
@@ -29,7 +29,7 @@
       width: 100%
 
 .bd-footer-tsp
-  color: $border-hover
+  color: v("border-hover")
   margin-top: 1.5rem
 
 %bd-footer-box
@@ -42,7 +42,7 @@
 
 .bd-footer-support
   @extend %bd-footer-box
-  border-top: 2px solid $scheme-main-ter
+  border-top: 2px solid v("scheme-main-ter")
   box-shadow: none
   padding: 3rem
   .bd-footer-title
@@ -70,7 +70,7 @@
     padding: 0.75rem 1.5rem
 
 .bd-footer-donation-title
-  color: $border-hover
+  color: v("border-hover")
   margin-bottom: 0.5rem
   strong
     color: currentColor
@@ -101,7 +101,7 @@ $star-figure-height: 156px
 
 .bd-footer-star
   @extend %bd-footer-box
-  transition-duration: $speed
+  transition-duration: v("speed")
   transition-property: box-shadow, transform
   will-change: box-shadow, transform
   +mobile
@@ -110,11 +110,11 @@ $star-figure-height: 156px
   +tablet
     width: calc(33.3333% - 2rem)
   &:hover
-    box-shadow: 0 3rem 3rem -1.25rem rgba($scheme-invert, 0.1)
+    box-shadow: 0 3rem 3rem -1.25rem vAlphaChange(scheme-invert, 0.1)
     transform: translateY(-0.5rem)
     .bd-footer-title,
     .bd-footer-subtitle
-      color: $link
+      color: v("link")
   &.bd-is-expo,
   &.bd-is-love
     padding-bottom: $star-figure-height
@@ -151,12 +151,12 @@ $star-figure-height: 156px
   a
     color: currentColor
     &:hover
-      color: $link
+      color: v("link")
 
 .bd-footer-link-title
-  color: $text-strong
+  color: v("text-strong")
   font-size: 1.25rem
-  font-weight: $weight-semibold
+  font-weight: v("weight-semibold")
   &:not(:first-child)
     margin-top: 1.5em
 
@@ -165,7 +165,7 @@ $star-figure-height: 156px
   &.bd-is-more
     font-size: 0.875rem
     a:not(:hover)
-      color: $border-hover
+      color: v("border-hover")
   &.bd-has-subtitle
     a
       align-items: center
@@ -181,7 +181,7 @@ $star-figure-height: 156px
         font-style: normal
       &:not(:hover)
         em
-          color: $border-hover
+          color: v("border-hover")
       +mobile
         flex-wrap: wrap
         margin-top: 1rem
