--- a/docs/_sass/global.sass
+++ b/docs/_sass/global.sass
@@ -3,8 +3,8 @@ svg
   max-width: 100%
 
 .bd-notice
-  background-color: $primary
-  color: $primary-invert
+  background-color: v("primary")
+  color: v("primary-invert")
   padding: 1em
   text-align: center
 
@@ -16,10 +16,10 @@ svg
   strong
     color: currentColor
   a
-    border-bottom: 1px solid rgba($scheme-main, 0.5)
+    border-bottom: 1px solid vAlphaChange(scheme-main, 0.5)
     padding-bottom: 2px
     &:hover
-      border-bottom-color: $scheme-main
+      border-bottom-color: v("scheme-main")
   span
     margin: 0 0.25em
     opacity: 0.5
@@ -49,7 +49,7 @@ $github-pink: #ea4aaa
   padding: calc(0.5em - 1px) 1em
   position: relative
   strong
-    font-weight: $weight-semibold
+    font-weight: v("weight-semibold")
     margin-top: -2px
   .icon
     color: inherit
@@ -75,14 +75,14 @@ $github-pink: #ea4aaa
   position: relative
   vertical-align: top
   img
-    border-radius: $radius
+    border-radius: v("radius")
     display: block
     max-height: none !important
   &:hover
     &::after
       +overlay
       background-color: rgba(#000, 0.05)
-      border-radius: $radius
+      border-radius: v("radius")
       content: ""
       display: block
 
@@ -108,8 +108,8 @@ $carbon-poweredby-height: 20px
   padding: 0
   position: relative
   &:hover
-    background-color: $scheme-main
-    box-shadow: 0 0 0 $carbon-shadow-size $scheme-main
+    background-color: v("scheme-main")
+    box-shadow: 0 0 0 $carbon-shadow-size v("scheme-main")
   +tablet
     width: $carbon-width
 
@@ -147,22 +147,22 @@ $carbon-poweredby-height: 20px
       width: $carbon-image-width
     &:hover
       & + .carbon-text
-        color: $link
+        color: v("link")
     &:active
       opacity: 0.8
   .carbon-text
     display: block
-    color: $text-strong
+    color: v("text-strong")
     line-height: 20px
     min-height: $carbon-height
     padding: 0 0 $carbon-poweredby-height calc(#{$carbon-image-width} + #{$carbon-spacing})
     &:hover
-      color: $link
+      color: v("link")
   .carbon-poweredby
     bottom: 0
-    color: $border-hover
+    color: v("border-hover")
     display: inline
-    font-size: $size-small
+    font-size: v("size-small")
     line-height: $carbon-poweredby-height
     position: absolute
     right: 0
