--- a/docs/_sass/highlight.sass
+++ b/docs/_sass/highlight.sass
@@ -1,6 +1,6 @@
 .highlight
-  background-color: $pre-background
-  border-radius: $radius-large
+  background-color: v("pre-background")
+  border-radius: v("radius-large")
   color: #586e75
   pre
     background-color: transparent
