--- a/docs/_sass/klmn.sass
+++ b/docs/_sass/klmn.sass
@@ -12,10 +12,10 @@
   margin: 0.25rem auto 0.25rem 0
 
 .bd-klmn-gap
-  background-color: $background
-  border-radius: $radius
-  color: $red
-  font-family: $family-monospace
+  background-color: v("background")
+  border-radius: v("radius")
+  color: v("red")
+  font-family: v("family-monospace")
   font-size: 0.75rem
   margin: 0.25rem 0 0.25rem 0.5rem
   padding: 0.375em 0.75em
@@ -23,8 +23,8 @@
   vertical-align: middle !important
   white-space: nowrap
   &.bd-is-selected
-    background-color: $green
-    color: $scheme-main
+    background-color: v("green")
+    color: v("scheme-main")
 
 .bd-klmn-columns:last-child
   .bd-notification
