--- a/docs/_sass/main.sass
+++ b/docs/_sass/main.sass
@@ -5,8 +5,8 @@
 .bd-figure
   +block
   align-items: center
-  border: 2px solid $scheme-main-ter
-  border-radius: $radius
+  border: 2px solid v("scheme-main-ter")
+  border-radius: v("radius")
   display: flex
   flex-direction: column
   text-align: center
@@ -14,9 +14,9 @@
     margin: 1em
   figcaption
     align-self: stretch
-    background-color: $scheme-main-ter
-    color: $text-light
-    font-size: $size-small
+    background-color: v("scheme-main-ter")
+    color: v("text-light")
+    font-size: v("size-small")
     padding: 1em
 
 // Lead
@@ -33,7 +33,7 @@
 
 .bd-prev-next
   align-items: flex-start
-  color: $border-hover
+  color: v("border-hover")
   display: none
   flex-grow: 0
   flex-shrink: 0
@@ -41,14 +41,14 @@
   text-align: center
   a,
   span
-    border-radius: $radius
+    border-radius: v("radius")
     width: 1.5rem
   a
     &:hover
-      background-color: $background
+      background-color: v("background")
 
 .bd-prev-next-bis
-  border-top: 2px solid $background
+  border-top: 2px solid v("background")
   display: flex
   justify-content: space-between
   margin-top: $main-spacing
@@ -64,7 +64,7 @@
 .bd-header
   margin-bottom: $main-spacing
   .subtitle
-    color: $text-light
+    color: v("text-light")
     strong
       color: currentColor
   #meta
@@ -87,12 +87,12 @@
       overflow: visible
       ul,
       a
-        border-bottom-color: $scheme-main-ter
+        border-bottom-color: v("scheme-main-ter")
         border-bottom-width: 2px
       a
         margin-bottom: -2px
       li:not(.is-active) a:hover
-          border-bottom-color: $border
+          border-bottom-color: v("border")
       ul
         flex-wrap: wrap
         max-width: 100%
@@ -109,7 +109,7 @@
 
 .bd-side,
 .bd-side-background
-  background-color: $scheme-main-bis
+  background-color: v("scheme-main-bis")
 
 .bd-side
   position: relative
@@ -128,19 +128,19 @@
       margin-bottom: 0.5em
     &.is-past
       a
-        color: $border-hover
+        color: v("border-hover")
     &.is-current
       a
-        color: $link
+        color: v("link")
   a
-    color: $text-light
+    color: v("text-light")
     &:hover
-      color: $link
+      color: v("link")
 
 .bd-category
   a
     &:hover
-      color: $link
+      color: v("link")
   &:not(:last-child)
     margin-bottom: 0.5rem
   &.is-active
@@ -156,13 +156,13 @@
 .bd-category-toggle
   +overlay
   align-items: center
-  color: $border-hover
+  color: v("border-hover")
   display: flex
   justify-content: flex-end
   .icon
     font-size: 0.75rem
     transform-origin: center
-    transition-duration: $speed
+    transition-duration: v("speed")
     transition-property: transform
 
 .tag.bd-mini-tag
@@ -174,10 +174,10 @@
   vertical-align: text-bottom
 
 .bd-category-name
-  color: $text-strong
+  color: v("text-strong")
   position: relative
   &.is-active
-    color: $link
+    color: v("link")
   .bd-mini-tag
     margin-left: 0.5em
 
@@ -201,9 +201,9 @@
       top: 0
 
 .bd-anchors-title
-  color: $border-hover
+  color: v("border-hover")
   font-size: 0.875rem
-  font-weight: $weight-semibold
+  font-weight: v("weight-semibold")
   margin-bottom: 0.5rem
 
 .bd-anchors-list
@@ -212,7 +212,7 @@
     &:last-child
       margin-top: 1em
   a
-    color: $text-strong
+    color: v("text-strong")
 
 +touch
   .bd-lead,
@@ -229,14 +229,14 @@
   .bd-duo
     display: flex
   .bd-lead
-    background-color: $scheme-main
+    background-color: v("scheme-main")
     overflow: hidden
     flex-grow: 1
     flex-shrink: 1
   .bd-prev-next
     display: flex
   .bd-side
-    flex: 0 0 calc(#{$sidebar-width} + 1.5rem)
+    flex: 0 0 $sidebar-width + 1.5rem
 
 +desktop
   .bd-main
@@ -256,15 +256,15 @@
   .bd-header-carbon
     flex-grow: 0
     flex-shrink: 0
-    margin: -15px 0 -15px ($main-spacing * 2)
+    margin: -15px 0 -15px $main-spacing * 2
     width: $carbon-width
   .bd-side
     padding: 3rem 0 3rem 1.5rem
 
 +widescreen
   .bd-header-carbon
-    margin-left: ($main-spacing * 3)
+    margin-left: $main-spacing * 3
 
 +fullhd
   .bd-header-carbon
-    margin-left: ($main-spacing * 4)
+    margin-left: $main-spacing * 4
