--- a/docs/_sass/patreon.sass
+++ b/docs/_sass/patreon.sass
@@ -4,7 +4,7 @@
 
 .bd-side-sponsor-label,
 .bd-banner-label
-  color: $border-hover
+  color: v("border-hover")
   font-size: 0.75rem
   margin-bottom: 0.75rem
 
@@ -17,13 +17,13 @@
     max-height: 100%
 
 .bd-banner
-  border-radius: $radius-large
+  border-radius: v("radius-large")
   display: block
   margin-top: 3rem
   padding-bottom: 1.5rem
   position: relative
   text-align: center
-  transition-duration: $speed
+  transition-duration: v("speed")
   transition-property: border-color, color
   strong
     color: currentColor
@@ -31,17 +31,17 @@
     margin-bottom: 0.25em
   &.is-patreon
     background-color: $patreon-blue
-    color: $scheme-main
+    color: v("scheme-main")
   // &.is-fortyfour
-  //   background-color: $scheme-main
-  //   border: 2px solid $background
+  //   background-color: v("scheme-main")
+  //   border: 2px solid v("background")
   .button
     transform-origin: center
-    transition-duration: $speed
+    transition-duration: v("speed")
     transition-property: transform
   &:hover
-    border-color: $link
-    color: $link
+    border-color: v("link")
+    color: v("link")
     .bd-banner-title
       color: currentColor
     .button
@@ -55,9 +55,9 @@
   opacity: 0.5
 
 .bd-banner-title
-  color: $text-strong
+  color: v("text-strong")
   font-size: 1.25em
-  font-weight: $weight-semibold
+  font-weight: v("weight-semibold")
   line-height: 1.25
   margin-bottom: 0.25em
 
