--- a/docs/_sass/sponsors.sass
+++ b/docs/_sass/sponsors.sass
@@ -17,8 +17,6 @@ $bd-partner-width: 12rem
   align-items: center
   display: flex
   flex-wrap: wrap
-  justify-content: space-between
-  justify-content: space-around
   justify-content: center
   margin: 0 auto
   max-width: (8 * $bd-partner-width)
@@ -52,7 +50,7 @@ $bd-partner-width: 12rem
     position: relative
 
 .bd-partnrs
-  background-color: $scheme-main-bis
+  background-color: v("scheme-main-bis")
   #carbonads
     .carbon-text
       padding-bottom: 0
@@ -60,7 +58,7 @@ $bd-partner-width: 12rem
       display: none
 
 .bd-partner-title
-  color: $border-hover
+  color: v("border-hover")
   font-size: 0.875rem
   margin-bottom: 1rem
 
@@ -74,11 +72,11 @@ $bd-partner-width: 12rem
 
 .bd-minis-link
   @extend %center
-  color: $text-light
+  color: v("text-light")
   .icon
     margin-right: 0.25em
   strong
-    color: $text-light
+    color: v("text-light")
     margin-left: 0.25em
 
 .bd-minis-list
