--- a/sass/components/level.sass
+++ b/sass/components/level.sass
@@ -1,4 +1,4 @@
-$level-item-spacing: ($block-spacing / 2) !default
+$level-item-spacing: calc(#{v(block-spacing)} / 2) !default
 
 @include vRegister(level-item-spacing, $level-item-spacing)
 
