--- a/sass/utilities/derived-variables.sass
+++ b/sass/utilities/derived-variables.sass
@@ -129,7 +129,6 @@ $text-strong: v("grey-darker") !default
 @include vRegister(text-light, $text-light)
 @include vRegister(text-strong, $text-strong)
 
-
 // Code colors
 
 $code: v("red") !default
@@ -137,6 +136,12 @@ $code-background: v("background") !default
 
 $pre: v("text") !default
 $pre-background: v("background") !default
+
+@include vRegister("code", $code)
+@include vRegister("code-background", $code-background)
+
+@include vRegister("pre", $pre)
+@include vRegister("pre-background", $pre-background)
 
 // Link colors
 
