--- a/docs/_sass/book.sass
+++ b/docs/_sass/book.sass
@@ -1,4 +1,4 @@
-$book-beige: #FFEDD7
+$book-beige: #ffedd7
 
 @keyframes fadeIn
   from
@@ -13,7 +13,7 @@ $book-beige: #FFEDD7
     transform: scale(1)
 
 .bd-book-banner
-  background-color: $primary
+  background-color: v("primary")
   position: relative
 
 .bd-book-pattern,
@@ -45,7 +45,7 @@ $book-beige: #FFEDD7
 
 .bd-book-content
   @extend %bd-box
-  box-shadow: 0 3rem 3rem -1rem rgba($scheme-invert, 0.2)
+  box-shadow: 0 3rem 3rem -1rem vAlphaChange(scheme-invert, 0.2)
   max-width: 520px
   padding: 3rem
 
@@ -98,7 +98,7 @@ $book-beige: #FFEDD7
 
 .bd-book-modal-background
   +overlay
-  background-color: rgba($scheme-invert, 0.86)
+  background-color: vAlphaChange(scheme-invert, 0.86)
 
 .bd-book-modal
   .bd-book-modal-background,
@@ -153,7 +153,7 @@ $book-beige: #FFEDD7
   .bd-book-inline-cover
     display: none
   .bd-book-modal-column
-    background-color: $scheme-main
+    background-color: v("scheme-main")
     position: relative
     &.bd-is-cover
       align-items: center
