--- a/docs/_sass/bsa.sass
+++ b/docs/_sass/bsa.sass
@@ -8,7 +8,7 @@
   .default-ad
     background-color: rgba(black, 0.3)
     border-radius: 2px
-    color: $scheme-main
+    color: v("scheme-main")
     display: inline-block
     font-size: 10px
     font-weight: bold
@@ -16,22 +16,21 @@
     text-transform: uppercase
     vertical-align: top
   & > a
-    background-color: $scheme-main
-    border-radius: $radius-large
-    box-shadow: 0 2px 3px rgba($scheme-invert, 0.1), 0 0 0 1px rgba($scheme-invert, 0.1)
-    color: $text
+    background-color: v("scheme-main")
+    border-radius: v("radius-large")
+    box-shadow: 0 2px 3px vAlphaChange(scheme-invert, 0.1), 0 0 0 1px vAlphaChange(scheme-invert, 0.1)
+    color: v("text")
     display: block
     line-height: 1.375
     margin-top: 15px
     min-height: 70px
-    padding: 15px
-    padding-left: 70px
+    padding: 15px 15px 15px 70px
     position: relative
     &:hover,
     &:focus
-      box-shadow: 0 2px 3px rgba($scheme-invert, 0.1), 0 0 0 1px $link
+      box-shadow: 0 2px 3px vAlphaChange(scheme-invert, 0.1), 0 0 0 1px v("link")
     &:active
-      box-shadow: inset 0 1px 2px rgba($scheme-invert, 0.2), 0 0 0 1px $link
+      box-shadow: inset 0 1px 2px vAlphaChange(scheme-invert, 0.2), 0 0 0 1px v("link")
     span
       display: block
     .default-image
@@ -46,9 +45,9 @@
         height: 40px
         width: 40px
     .default-title
-      color: $text-strong
+      color: v("text-strong")
       display: inline
-      font-weight: $weight-bold
+      font-weight: v("weight-bold")
       &::after
         content: " — "
     .default-description
