--- a/docs/_sass/callout.sass
+++ b/docs/_sass/callout.sass
@@ -1,13 +1,13 @@
 .bd-callout
   +block
-  background-color: $background
-  border-radius: $radius
+  background-color: v("background")
+  border-radius: v("radius")
   padding: 1.25rem 2.5rem 1.25rem 1.5rem
   position: relative
   // Colors
-  @each $name, $pair in $colors
-    $color: nth($pair, 1)
-    $color-invert: nth($pair, 2)
+  @each $name in $colors-list
+    $color: v($name)
+    $color-invert: v($name+"-invert")
     &.is-#{$name}
       background-color: $color
       color: $color-invert
