--- a/docs/_sass/love.sass
+++ b/docs/_sass/love.sass
@@ -1,5 +1,5 @@
 .bd-testimonials
-  background-color: $background
+  background-color: v("background")
 
 .bd-testimonial
   align-items: flex-start
@@ -7,7 +7,7 @@
   justify-content: center
 
 .bd-testimonial-tweet
-  background-color: $scheme-main
+  background-color: v("scheme-main")
 
 .bd-more-loves
   align-items: center
@@ -20,7 +20,7 @@
     padding: 0.75em 1.5em
     span
       transform-origin: center center
-      transition: transform $speed $easing
+      transition: transform v("speed") v("easing")
     &:hover
       span
         transform: scale(1.04)
@@ -51,13 +51,13 @@
 
 .bd-rainbow
   animation: rainbow 8s ease infinite
-  background-image: linear-gradient(124deg, $orange, $red, $purple, $blue)
+  background-image: linear-gradient(124deg, v("orange"), v("red"), v("purple"), v("blue"))
   background-size: 800% 800%
 
 .hero.bd-is-love
   .title,
   .subtitle
-    color: $scheme-main
+    color: v("scheme-main")
 
 @keyframes rainbow
     0%
@@ -111,7 +111,7 @@
       margin-left: 1.5rem
 
 .bd-shoutout
-  background-color: $background
+  background-color: v("background")
   padding: 2rem
   text-align: center
   &:not(:last-child)
