--- a/docs/_sass/native.sass
+++ b/docs/_sass/native.sass
@@ -30,7 +30,7 @@
   text-decoration: none
   &:hover
     .native-cta
-      box-shadow: 0 1rem 2rem 0 rgba($scheme-invert, 0.1)
+      box-shadow: 0 1rem 2rem 0 vAlphaChange(scheme-invert, 0.1)
       transform: translateY(-0.25rem)
 
 .native-img
@@ -62,13 +62,13 @@
 
 .native-cta
   border: none
-  box-shadow: 0 0.5rem 1rem 0 rgba($scheme-invert, 0.2)
+  box-shadow: 0 0.5rem 1rem 0 vAlphaChange(scheme-invert, 0.2)
   flex-grow: 0
   flex-shrink: 0
-  font-weight: $weight-semibold
+  font-weight: v("weight-semibold")
   height: auto
   padding: 0.5em 1em
-  transition-duration: $speed * 2
+  transition-duration: calc(#{v("speed")} * 2)
   transition-property: box-shadow, transform
   will-change: box-shadow, transform
 
