--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -1,5 +1,7 @@
 @charset "utf-8"
 
+$themeable: "any"
+
 $bootstrap: #6f5499
 $github: #333333
 $twitter: #55acee
@@ -12,11 +14,10 @@ $bleeding-red: #CA1F26
 $star: #FFD257
 $rss: #f26522
 
-$mauve: #8A4D76
+$mauve: #8a4d76
 $pink: #FA7C91
 $brown: #757763
-$beige-light: #D0D1CD
-$beige-lighter: #EFF0EB
+$beige-light: #d0d1cd
 
 $carbon-width: 300px
 $carbon-height: 100px
@@ -26,6 +27,16 @@ $sidebar-width: 10.5rem
 
 // @import "./bulma-dark"
 @import "../bulma"
+
+// Make colors relative to initial colors
+$mauve: vAdjust("purple", $hue: hue($mauve) - getRegistered("purple-h"), $saturation: saturation($mauve) - getRegistered("purple-s"), $lightness: lightness($mauve) - getRegistered("purple-l"))
+$pink: vAdjust("purple", $hue: hue($pink) - getRegistered("purple-h"), $saturation: saturation($pink) - getRegistered("purple-s"), $lightness: lightness($pink) - getRegistered("purple-l"))
+
+@include vRegister("mauve", $mauve)
+@include vRegister("pink", $pink)
+@include vRegister("brown", $brown)
+@include vRegister("beige-light", $beige-light)
+@include vRegister("beige-lighter", vAdjust("beige-light", $lightness: -10%))
 
 %center
   align-items: center
@@ -49,7 +60,7 @@ $sidebar-width: 10.5rem
     pointer-events: none
     transform: scale(1.1)
     transform-origin: center
-    transition-duration: $speed * 2
+    transition-duration: calc(#{v(speed)} * 2)
     transition-property: opacity, transform
   &:hover
     &::before
@@ -89,3 +100,8 @@ $sidebar-width: 10.5rem
 @import "./_sass/book"
 @import "./_sass/native"
 @import "./_sass/focus"
+
+@include theme("default")
+
+@include theme("darkly")
+  @import "../test/themes/darkly"
