Add dark mode for doc

--- a/docs/bulma-dark.sass
+++ b/docs/bulma-dark.sass
@@ -1,41 +1,40 @@
-@import ../sass/utilities/initial-variables.sass
 
 // General colors
 
-$scheme-main: $black
-$scheme-main-bis: $black-bis
-$scheme-main-ter: $black-ter
-$scheme-invert: $white
-$scheme-invert-bis: $white-bis
-$scheme-invert-ter: $white-ter
+$scheme-main: vRegister("scheme-main", v("black"))
+$scheme-main-bis: vRegister("scheme-main-bis", v("black-bis"))
+$scheme-main-ter: vRegister("scheme-main-ter", v("black-ter"))
+$scheme-invert: vRegister("scheme-invert", v("white"))
+$scheme-invert-bis: vRegister("scheme-invert-bis", v("white-bis"))
+$scheme-invert-ter: vRegister("scheme-invert-ter", v("white-ter"))
 
-$background: $black-ter
+$background: vRegister("background", v("black-ter"))
 
-$border: $grey-darker
-$border-hover: $grey-dark
-$border-light: $grey-darker
-$border-light-hover: $grey-dark
+$border: vRegister("border", v("grey-darker"))
+$border-hover: vRegister("border-hover", v("grey-dark"))
+$border-light: vRegister("border-light", v("grey-darker"))
+$border-light-hover: vRegister("border-light-hover", v("grey-dark"))
 
 // Text colors
 
-$text: $grey-light
-$text-invert: $grey-darker
-$text-light: $grey
-$text-strong: $white
+$text: vRegister("text", v("grey-light"))
+$text-invert: vRegister("text-invert", v("grey-darker"))
+$text-light: vRegister("text-light", v("grey"))
+$text-strong: vRegister("text-strong", v("white"))
 
 // Link colors
 
-$link-hover: $white
-$link-hover-border: $grey-dark
+$link-hover: vRegister("link-hover", v("white"))
+$link-hover-border: vRegister("link-hover-border", v("grey-dark"))
 
-$link-focus: $white
-$link-focus-border: $blue
+$link-focus: vRegister("link-focus", v("white"))
+$link-focus-border: vRegister("link-focus-border", v("blue"))
 
-$link-active: $white
-$link-active-border: $grey-light
+$link-active: vRegister("link-active", v("white"))
+$link-active-border: vRegister("link-active-border", v("grey-light"))
 
 .bd-navbar
-  background-color: $scheme-main-bis
+  background-color: v("scheme-main-bis")
 
   &.has-shadow
     box-shadow: none
