--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -1,6 +1,6 @@
 @charset "utf-8"
 
-$themeable: "any"
+$themeable: "any" !default
 
 $bootstrap: #6f5499
 $github: #333333
@@ -101,7 +101,7 @@ $pink: vAdjust("purple", $hue: hue($pink) - getRegistered("purple-h"), $saturati
 @import "./_sass/native"
 @import "./_sass/focus"
 
-@include theme("default")
+//@include theme("default")
 
-@include theme("darkly")
-  @import "../test/themes/darkly"
+@include theme("dark")
+  @import "bulma-dark"
