--- a/sass/themeable/css-variables.sass
+++ b/sass/themeable/css-variables.sass
@@ -1,4 +1,2 @@
 @if $themeable == "any"
-  \:root, [data-theme=bulma]
-    @each $name in $used_vars
-      @include defineVariable($name, map_get($registered_vars, $name))
+  @include theme("default")
